archivos completos para template TX

--- a/BaseTX/src/index.html
+++ b/BaseTX/src/index.html
@@ -1,14 +1,77 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>BaseTX</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#d6610e" />
+    <base href="./">
+
+    <!-- Page title -->
+    <title>Base TX</title>
+
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
+
+    <!-- Vendor styles -->
+    <link rel="stylesheet" href="assets/vendor/fontawesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="assets/vendor/metisMenu/dist/metisMenu.css" />
+    <link rel="stylesheet" href="assets/vendor/animate.css/animate.css" />
+    <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/vendor/sweetalert/lib/sweet-alert.css" />
+    <link rel="stylesheet" href="assets/vendor/owlcarousel/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/vendor/owlcarousel/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/vendor/select2/select2.css">
+    <link rel="stylesheet" href="assets/vendor/select2/select2-bootstrap.css">
+    <link rel="stylesheet" href="assets/vendor/summernote/summernote.css">
+
+    <!-- App styles light-skin-->
+    <link rel="stylesheet" href="assets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="assets/fonts/pe-icon-7-stroke/css/helper.css" />
+    <link rel="stylesheet" href="assets/styles/fonts.css" />
+    <link rel="stylesheet" href="assets/styles/animate.css" />
+    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.18/datatables.min.css" />
+
+
+
+    <link rel="manifest" href="./manifest.json">
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="fixed-navbar sidebar-scroll hide-sidebar">
+
+    <!--[if lt IE 7]>
+    <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    <app-root></app-root>
+
+    <!-- Vendor scripts -->
+    <!--DEPLOY WEB EXPORER-->
+    <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
+    <!--DEPLOY ELECTRON
+    <script>
+        window.$ = window.jQuery = require('./assets/vendor/jquery/dist/jquery.min.js');
+    </script>-->
+
+
+    <script src="assets/vendor/jquery-ui/jquery-ui.min.js"></script>
+    <script src="assets/vendor/slimScroll/jquery.slimscroll.min.js"></script>
+    <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/vendor/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="assets/vendor/iCheck/icheck.min.js"></script>
+    <script src="assets/vendor/sparkline/index.js"></script>
+    <script src="assets/vendor/sweetalert/lib/sweet-alert.min.js"></script>
+    <script src="assets/vendor/owlcarousel/dist/owl.carousel.min.js"></script>
+    <script src="assets/vendor/select2/select2.min.js"></script>
+    <script src="assets/vendor/summernote/summernote.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.18/datatables.min.js"></script>
+
+    <!-- App scripts -->
+    <script src="assets/scripts/homer.js"></script>
+
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
-</html>
+
+<!-- </html> -->
